WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164750
CodeCache should stop pretending to cache builtins
https://bugs.webkit.org/show_bug.cgi?id=164750
Summary
CodeCache should stop pretending to cache builtins
Geoffrey Garen
Reported
2016-11-14 17:08:44 PST
CodeCache should stop pretending to cache builtins
Attachments
Patch
(15.15 KB, patch)
2016-11-14 17:13 PST
,
Geoffrey Garen
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-11-14 17:13:04 PST
Created
attachment 294778
[details]
Patch
Saam Barati
Comment 2
2016-11-14 17:20:35 PST
Comment on
attachment 294778
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=294778&action=review
r=me
> Source/JavaScriptCore/parser/SourceCodeKey.h:-48 > - (static_cast<unsigned>(builtinMode) << 1) |
Maybe it's worth updating the other shifts to be subtracted by 1?
Geoffrey Garen
Comment 3
2016-11-15 11:04:25 PST
Committed
r208736
: <
http://trac.webkit.org/changeset/208736
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug